# MooCoverage

./: CMakeLists.txt  LICENSE.md  README.md  clang36_patch.diff  devenv.sh  env.sh
cmake/: LLVM.cmake
instrumentation/: CMakeLists.txt  CMakeSourceLists.txt
instrumentation/include/moocov/: ASTInstrumentator.h  Block.h  FileInstrumentation.h  InstrumentationContext.h  InstrumentationOptions.h  SignalRegistry.h
instrumentation/include/moocov/utils/: DelayedString.h  FileRewriter.h  SourceFileRef.h  TransformedCompilationDatabase.h  fastint.h  lexutils.h  string.h
instrumentation/src/: ASTInstrumentator.cpp  Block.cpp  FileInstrumentation.cpp  InstrumentationOptions.cpp  SignalRegistry.cpp  main.cpp  utils.cpp
instrumentation/src/utils/: SourceFileRef.cpp  fastint.cpp  lexutils.cpp
lib/: CMakeLists.txt  CMakeSourceLists.txt
lib/include/libmoocov/: Core.h  CoverageData.h  CoverageMap.h  LineCoverage.h  SourceLocation.h
lib/include/libmoocov/utils/: fastint.h
lib/src/: CoverageData.cpp  CoverageMap.cpp  LineCoverage.cpp
runtime/: CMakeLists.txt
runtime/include/moocovrt/: fastint.h  interface.h  likely.h  runtime.h
runtime/src/: runtime.c
test/: CMakeLists.txt  lit.site.cfg  lit.site.cfg.in
test/instrumentation/: c-compatibility.c  exprs.cpp  function-calls.cpp  goto.cpp  if-elseif-else.cpp  ignored-functions.cpp  include-empty.h  include-instrumented.h  include.cpp  jump-statements.cpp  labels.cpp  nested-single-stmts.cpp  preproc-symbol.cpp
test/maps/: conditionals.cpp  exprs.cpp  jump-statements.cpp  labels.cpp
test/runtime/: auto-dump.cpp  controls.cpp  double-include.cpp  double-include.h  simple.cpp
tools/: CMakeLists.txt
tools/moo2gcov/: CMakeLists.txt  CMakeSourceLists.txt
tools/moo2gcov/include/moo2gcov/: ConverterOptions.h  GcovWriter.h
tools/moo2gcov/src/: GcovWriter.cpp  main.cpp
tools/testing/: build-runtime  test-coverage  test-instrumentation  test-mapping
